[gd_scene load_steps=11 format=2]

[ext_resource path="res://gui/toolbar/BuildingMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://gui/toolbar/ProfileMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://gui/toolbar/EnvironmentMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://gui/toolbar/Toolbar.gd" type="Script" id=4]
[ext_resource path="res://gui/toolbar/ControlMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://gui/custom/SlightlyBetterDialog.tscn" type="PackedScene" id=6]

[sub_resource type="Image" id=6]
data = {
"data": PoolByteArray( 0, 0, 0, 4, 0, 0, 0, 10, 0, 0, 0, 17, 0, 0, 0, 25, 0, 0, 0, 31, 0, 0, 0, 34, 0, 0, 0, 36, 0, 0, 0, 36, 0, 0, 0, 36, 0, 0, 0, 36, 0, 0, 0, 34, 0, 0, 0, 31, 0, 0, 0, 25, 0, 0, 0, 17, 0, 0, 0, 10, 0, 0, 0, 4, 0, 0, 0, 10, 0, 0, 0, 21, 0, 0, 0, 37, 0, 0, 0, 52, 0, 0, 0, 63, 0, 0, 0, 70, 0, 0, 0, 71, 0, 0, 0, 72, 0, 0, 0, 72, 0, 0, 0, 71, 0, 0, 0, 70, 0, 0, 0, 63, 0, 0, 0, 52, 0, 0, 0, 37, 0, 0, 0, 21, 0, 0, 0, 10, 0, 0, 0, 17, 0, 0, 0, 37, 60, 58, 68, 119, 86, 83, 97, 239, 82, 80, 93, 255, 81, 79, 93, 255, 81, 79, 93, 255, 81, 79, 93, 255, 81, 79, 93, 255, 81, 79, 93, 255, 81, 79, 93, 255, 82, 80, 93, 255, 86, 83, 97, 239, 60, 58, 68, 119, 0, 0, 0, 37, 0, 0, 0, 17, 0, 0, 0, 25, 0, 0, 0, 52, 86, 82, 96, 239, 70, 66, 78, 255, 66, 62, 74, 255, 65, 62, 73, 255, 65, 62, 73, 255, 65, 62, 73, 255, 65, 62, 73, 255, 65, 62, 73, 255, 65, 62, 73, 255, 66, 62, 74, 255, 70, 66, 78, 255, 86, 82, 96, 239, 0, 0, 0, 52, 0, 0, 0, 25, 0, 0, 0, 31, 0, 0, 0, 63, 81, 78, 91, 255, 65, 62, 73, 255, 64, 62, 72, 255, 64, 62, 72, 255, 64, 62, 72, 255, 64, 62, 72, 255, 64, 62, 72, 255, 64, 62, 72, 255, 64, 62, 72, 255, 64, 62, 72, 255, 65, 62, 73, 255, 81, 78, 91, 255, 0, 0, 0, 63, 0, 0, 0, 31, 0, 0, 0, 34, 0, 0, 0, 70, 79, 76, 89, 255, 63, 61, 71, 255, 63, 61, 71, 255, 63, 61, 71, 255, 63, 61, 71, 255, 63, 61, 71, 255, 63, 61, 71, 255, 63, 61, 71, 255, 63, 61, 71, 255, 63, 61, 71, 255, 63, 61, 71, 255, 79, 76, 89, 255, 0, 0, 0, 70, 0, 0, 0, 34, 0, 0, 0, 36, 0, 0, 0, 71, 78, 74, 88, 255, 62, 59, 70, 255, 62, 59, 70, 255, 62, 59, 70, 255, 62, 59, 70, 255, 62, 59, 70, 255, 62, 59, 70, 255, 62, 59, 70, 255, 62, 59, 70, 255, 62, 59, 70, 255, 62, 59, 70, 255, 78, 74, 88, 255, 0, 0, 0, 71, 0, 0, 0, 36, 0, 0, 0, 36, 0, 0, 0, 72, 75, 73, 85, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 60, 58, 68, 255, 75, 73, 85, 255, 0, 0, 0, 72, 0, 0, 0, 36, 0, 0, 0, 36, 0, 0, 0, 72, 74, 71, 84, 255, 59, 57, 67, 255, 59, 57, 67, 255, 59, 57, 67, 255, 59, 57, 67, 255, 59, 57, 67, 255, 59, 57, 67, 255, 59, 57, 67, 255, 59, 57, 67, 255, 59, 57, 67, 255, 59, 57, 67, 255, 74, 71, 84, 255, 0, 0, 0, 72, 0, 0, 0, 36, 0, 0, 0, 36, 0, 0, 0, 71, 73, 70, 83, 255, 58, 56, 66, 255, 58, 56, 66, 255, 58, 56, 66, 255, 58, 56, 66, 255, 58, 56, 66, 255, 58, 56, 66, 255, 58, 56, 66, 255, 58, 56, 66, 255, 58, 56, 66, 255, 58, 56, 66, 255, 73, 70, 83, 255, 0, 0, 0, 71, 0, 0, 0, 36, 0, 0, 0, 34, 0, 0, 0, 70, 71, 69, 80, 255, 57, 55, 64, 255, 57, 55, 64, 255, 57, 55, 64, 255, 57, 55, 64, 255, 57, 55, 64, 255, 57, 55, 64, 255, 57, 55, 64, 255, 57, 55, 64, 255, 57, 55, 64, 255, 57, 55, 64, 255, 71, 69, 80, 255, 0, 0, 0, 70, 0, 0, 0, 34, 0, 0, 0, 31, 0, 0, 0, 63, 71, 67, 80, 255, 56, 53, 63, 255, 56, 53, 63, 255, 56, 53, 63, 255, 56, 53, 63, 255, 56, 53, 63, 255, 56, 53, 63, 255, 56, 53, 63, 255, 56, 53, 63, 255, 56, 53, 63, 255, 56, 53, 63, 255, 71, 67, 80, 255, 0, 0, 0, 63, 0, 0, 0, 31, 0, 0, 0, 25, 0, 0, 0, 52, 71, 68, 82, 239, 58, 56, 66, 255, 54, 52, 62, 255, 54, 52, 62, 255, 54, 52, 62, 255, 54, 52, 62, 255, 54, 52, 62, 255, 54, 52, 62, 255, 54, 52, 62, 255, 54, 52, 62, 255, 58, 56, 66, 255, 71, 68, 82, 239, 0, 0, 0, 52, 0, 0, 0, 25, 0, 0, 0, 17, 0, 0, 0, 37, 51, 49, 57, 119, 71, 68, 80, 239, 68, 66, 77, 255, 68, 65, 76, 255, 68, 65, 76, 255, 68, 65, 76, 255, 68, 65, 76, 255, 68, 65, 76, 255, 68, 65, 76, 255, 68, 66, 77, 255, 71, 68, 81, 237, 51, 49, 57, 119, 0, 0, 0, 37, 0, 0, 0, 17, 0, 0, 0, 10, 0, 0, 0, 21, 0, 0, 0, 37, 0, 0, 0, 52, 0, 0, 0, 63, 0, 0, 0, 70, 0, 0, 0, 71, 0, 0, 0, 72, 0, 0, 0, 72, 0, 0, 0, 71, 0, 0, 0, 70, 0, 0, 0, 63, 0, 0, 0, 52, 0, 0, 0, 37, 0, 0, 0, 21, 0, 0, 0, 10, 0, 0, 0, 4, 0, 0, 0, 10, 0, 0, 0, 17, 0, 0, 0, 25, 0, 0, 0, 31, 0, 0, 0, 34, 0, 0, 0, 36, 0, 0, 0, 36, 0, 0, 0, 36, 0, 0, 0, 36, 0, 0, 0, 34, 0, 0, 0, 31, 0, 0, 0, 25, 0, 0, 0, 17, 0, 0, 0, 10, 0, 0, 0, 4 ),
"format": "RGBA8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=3]
flags = 4
flags = 4
image = SubResource( 6 )
size = Vector2( 16, 16 )

[sub_resource type="StyleBoxTexture" id=4]
content_margin_left = 7.0
content_margin_right = 7.0
content_margin_top = 7.0
content_margin_bottom = 7.0
texture = SubResource( 3 )
region_rect = Rect2( 4, 3, 8, 13 )
margin_left = 4.0
margin_right = 4.0
margin_top = 4.0
margin_bottom = 4.0

[sub_resource type="Theme" id=5]
PanelContainer/styles/panel = SubResource( 4 )

[node name="Toolbar" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 34.0
theme = SubResource( 5 )
script = ExtResource( 4 )

[node name="HBox" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 1593.0
margin_bottom = 27.0

[node name="ProfileMenu" parent="HBox" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 53.0
margin_bottom = 20.0

[node name="VSeparator" type="VSeparator" parent="HBox"]
margin_left = 57.0
margin_right = 61.0
margin_bottom = 20.0

[node name="BuildingMenu" parent="HBox" instance=ExtResource( 1 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 65.0
margin_top = 0.0
margin_right = 129.0
margin_bottom = 20.0

[node name="VSeparator2" type="VSeparator" parent="HBox"]
margin_left = 133.0
margin_right = 137.0
margin_bottom = 20.0

[node name="EnvironmentMenu" parent="HBox" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 141.0
margin_top = 0.0
margin_right = 234.0
margin_bottom = 20.0

[node name="VSeparator3" type="VSeparator" parent="HBox"]
margin_left = 238.0
margin_right = 242.0
margin_bottom = 20.0

[node name="ControlMenu" parent="HBox" instance=ExtResource( 5 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 246.0
margin_top = 0.0
margin_right = 304.0
margin_bottom = 20.0

[node name="VSeparator4" type="VSeparator" parent="HBox"]
margin_left = 308.0
margin_right = 312.0
margin_bottom = 20.0

[node name="Credits" type="Button" parent="HBox"]
margin_left = 316.0
margin_right = 373.0
margin_bottom = 20.0
focus_mode = 0
enabled_focus_mode = 0
text = "Credits"
flat = true

[node name="CreditsDialog" parent="HBox/Credits" instance=ExtResource( 6 )]
margin_left = -72.0
margin_top = 143.0
margin_right = 393.0
margin_bottom = 460.0
window_title = "Credits"
horizontal_margin = 40
vertical_margin = 30

[node name="CreditsText" type="RichTextLabel" parent="HBox/Credits/CreditsDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -189.5
margin_top = -126.5
margin_right = 189.5
margin_bottom = 126.5
bbcode_enabled = true
bbcode_text = "Program by CluckeyMcCormick.

Source code available at https://github.com/CluckeyMcCormick/ncg2

Special thanks to @sailorhg (Sailor Mercury) - her Sailor Moon project inspired me to pick this back up as well as inspiring a few profiles.

This project is dedicated in memory of Shamus Young. 

This project is an adaptation/derivation of his original Pixel City project. Shamus' writings were fundamental in developing my programming skills and this project would not exist without him."
text = "Program by CluckeyMcCormick.

Source code available at https://github.com/CluckeyMcCormick/ncg2

Special thanks to @sailorhg (Sailor Mercury) - her Sailor Moon project inspired me to pick this back up as well as inspiring a few profiles.

This project is dedicated in memory of Shamus Young. 

This project is an adaptation/derivation of his original Pixel City project. Shamus' writings were fundamental in developing my programming skills and this project would not exist without him."

[node name="ProfileNotes" type="Label" parent="HBox"]
margin_left = 377.0
margin_top = 3.0
margin_right = 1586.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 0.490196 )
text = "by Source"
align = 2
clip_text = true

[node name="VisibilityCooldown" type="Timer" parent="."]
wait_time = 0.01

[connection signal="regenerate" from="HBox/EnvironmentMenu" to="." method="_on_EnvironmentMenu_regenerate"]
[connection signal="toggle_camera_pause" from="HBox/ControlMenu" to="." method="_on_ControlMenu_toggle_camera_pause"]
[connection signal="toggle_effect_pause" from="HBox/ControlMenu" to="." method="_on_ControlMenu_toggle_effect_pause"]
[connection signal="toggle_gui" from="HBox/ControlMenu" to="." method="_on_ControlMenu_toggle_gui"]
[connection signal="pressed" from="HBox/Credits" to="." method="_on_Credits_pressed"]
[connection signal="timeout" from="VisibilityCooldown" to="." method="_on_VisibilityCooldown_timeout"]
